<resources>
    <string name="app_name">Luki</string>
    <string name="noDescription"></string>
    <string name="splashPageCTAbtn">Empezar</string>
    <string name="id_number">No. Cedula</string>
    <string name="luki_pass">Clave Luki</string>
    <string name="forgot_password">Olvidaste tu clave Luki?</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="register">Registrarse</string>
    <string name="enter">Entrar</string>
    <string name="who_am_i">¿Quién soy?</string>
    <string name="customer">Comprador</string>
    <string name="seller">Vendedor</string>
    <string name="signUp">Regístrate</string>
    <string name="name">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="birth_day">Fecha de nacimiento</string>
    <string name="dd">DD</string>
    <string name="mm">MM</string>
    <string name="yyyy">AAAA</string>
    <string name="next">Siguiente</string>
    <string name="cc_date">Fecha de Expedición</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="check_pass">Confirma tu contraseña</string>
    <string name="i_accept">Acepto los</string>
    <string name="terms_conditions">Términos y Condiciones</string>
    <string name="sign_confirmation_description">Ve y busca en tu correo el código de confirmación. Digitalo para continuar con tu registro.</string>
    <string name="welcome">Bienvenido</string>
    <string name="my_products">Mis productos</string>
    <string name="new_product">Nuevo producto</string>
    <string name="my_orders">Mis pedidos</string>
    <string name="add_photos">Agrega fotos</string>
    <string name="add">Añadir</string>
    <string name="product_name">Nombre del producto</string>
    <string name="product_description">Descripción del producto</string>
    <string name="price">Precio</string>
    <string name="catalogue">Catálogos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>