<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/login_imgView_logo"
        android:layout_width="84dp"
        android:layout_height="111dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/noDescription"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_luki" />

    <ImageView
        android:id="@+id/logo_imgView_girl"
        android:layout_width="0dp"
        android:layout_height="353dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="100dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/noDescription"
        android:scaleType="centerInside"
        android:translationX="-45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_girl" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imgView_girl">

        <EditText
            android:id="@+id/login_editText_user"
            style="@style/InputextMain"
            android:layout_width="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:autofillHints=""
            android:drawableStart="@drawable/input_user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/id_number"
            android:inputType="number"
            android:paddingStart="15dp"
            android:paddingEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_editText_pass"
            style="@style/InputextMain"
            android:layout_width="0dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="45dp"
            android:autofillHints=""
            android:drawableStart="@drawable/input_pass"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/luki_pass"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_editText_user" />

        <Button
            android:id="@+id/login_btn_forgotpass"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_light"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="#A7A7A7"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_editText_pass"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_editText_pass" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_btn_login"
        style="@style/ButtonMainSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/dont_have_account"
            android:textColor="#313131"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_btn_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_btn_signup" />

        <Button
            android:id="@+id/login_btn_signup"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="0dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/mustardLuki"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/noDescription"
        android:translationX="30dp"
        android:translationY="-150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="159dp"
        android:layout_height="157dp"
        android:layout_marginEnd="85dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/noDescription"
        android:translationY="-100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="341dp"
        android:layout_height="353dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/noDescription"
        android:rotationX="180"
        android:rotationY="180"
        android:translationX="-90dp"
        android:translationY="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cloud" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="207dp"
        android:layout_height="219dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/noDescription"
        android:rotationX="180"
        android:rotationY="180"
        android:translationY="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cloud" />

</androidx.constraintlayout.widget.ConstraintLayout>