<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".newProduct">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/new_product"
            android:textColor="@color/purpleLuki"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/add_photos"
            android:textColor="@color/violetLuki"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/newProduct_imgBtn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/noDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_picture" />

                <ImageButton
                    android:id="@+id/newProduct_imgBtn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/noDescription"
                    app:layout_constraintStart_toEndOf="@+id/newProduct_imgBtn_1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_picture" />

                <ImageButton
                    android:id="@+id/newProduct_imgBtn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/noDescription"
                    app:layout_constraintStart_toEndOf="@+id/newProduct_imgBtn_2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_picture" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout10">

                <ImageButton
                    android:id="@+id/newProduct_imgBtn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/noDescription"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_picture" />

                <ImageButton
                    android:id="@+id/newProduct_imgBtn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/noDescription"
                    app:layout_constraintStart_toEndOf="@+id/newProduct_imgBtn_5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_picture" />

                <ImageButton
                    android:id="@+id/newProduct_imgBtn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/noDescription"
                    app:layout_constraintStart_toEndOf="@+id/newProduct_imgBtn_4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_picture" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/newProduct_btn_add"
            style="@style/ButtonMainSmall"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newProduct_spinner_categories"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/newProduct_et_name"
            style="@style/InputextMain"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"

            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/product_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout12" />

        <EditText
            android:id="@+id/newProduct_et_description"
            style="@style/InputextMain"
            android:layout_width="0dp"
            android:layout_height="174dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/product_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingTop="10dp"

            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/newProduct_et_name"
            app:layout_constraintStart_toStartOf="@+id/newProduct_et_name"
            app:layout_constraintTop_toBottomOf="@+id/newProduct_et_name" />

        <EditText
            android:id="@+id/newProduct_et_price"
            style="@style/InputextMain"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/price"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/newProduct_et_description"
            app:layout_constraintStart_toStartOf="@+id/newProduct_et_description"
            app:layout_constraintTop_toBottomOf="@+id/newProduct_et_description" />

        <Spinner
            android:id="@+id/newProduct_spinner_categories"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/inputfield_main_big"
            android:theme="@style/SpinnerTheme"
            app:layout_constraintEnd_toEndOf="@+id/newProduct_et_price"
            app:layout_constraintStart_toStartOf="@+id/newProduct_et_price"
            app:layout_constraintTop_toBottomOf="@+id/newProduct_et_price" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="231dp"
            android:layout_height="209dp"
            android:background="@android:color/transparent"
            android:translationY="-135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cloud" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="306dp"
            android:layout_height="310dp"
            android:rotation="180"
            android:translationX="-70dp"
            android:translationY="175dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/cloud" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="$"
            android:textColor="@color/purpleLuki"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/newProduct_et_price"
            app:layout_constraintEnd_toEndOf="@+id/newProduct_et_price"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/newProduct_et_price"
            app:layout_constraintTop_toTopOf="@+id/newProduct_et_price"
            app:layout_constraintVertical_bias="0.31" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
